# push-message-thingsboard

./: .env.example  .gitignore  Cargo.toml  build.bat  data_example.json  quick_start.bat  run.bat  使用指南.md  推送数据命令.txt  雨量计算规则链.json  雨量计算规则链_48h.json
src/: main.rs
演示数据推送包/: earthquake-1.json  forest-fire-warning-1.json  geology-disaster-warning-1.json  rain-warning-1.json  river-warning-1.json  推送数据命令.txt
