[package]
name = "push-message-thingsboard"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dotenv = "0.15"
anyhow = "1.0"
clap = { version = "4.0", features = ["derive"] }
chrono = { version = "0.4.41", features = ["serde"] }
